--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,11 @@
         }
     },
     "scripts": {
+        "heroku-post-build": [
+            "php artisan config:cache",
+            "php artisan route:cache",
+            "php artisan view:cache"
+        ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
