--- a/public/.htaccess
+++ b/public/.htaccess
@@ -22,5 +22,5 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
-    RewriteRule ^(.*)$ public/$1 [L]
+    # RewriteRule ^(.*)$ public/$1 [L]
 </IfModule>
